# gamlastan

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  development.md  justfile  samlattacks.md
crates/gamlastan/: Cargo.toml  README.md
crates/gamlastan-actix/: Cargo.toml  README.md
crates/gamlastan-actix/src/: config.rs  error.rs  extractors.rs  idp.rs  lib.rs  middleware.rs  request_adapter.rs  responders.rs  response_adapter.rs  sp.rs
crates/gamlastan-actix/tests/fixtures/: other-cert.pem
crates/gamlastan-mdq/: Cargo.toml  README.md
crates/gamlastan-mdq/src/: client.rs  error.rs  fetch.rs  lib.rs  transform.rs  verify.rs
crates/gamlastan-mdq/tests/: mdq.rs
crates/gamlastan-mdq/tests/fixtures/: sign-cert.pem
crates/gamlastan/src/: lib.rs
crates/gamlastan/src/attribute_map/: mod.rs
crates/gamlastan/src/attribute_map/maps/: adfs_v1x.rs  adfs_v20.rs  basic.rs  mod.rs  saml_uri.rs  shibboleth_uri.rs
crates/gamlastan/src/bindings/: caching.rs  error.rs  mod.rs  paos.rs  post.rs  redirect.rs  relay_state.rs  soap.rs  traits.rs  uri.rs
crates/gamlastan/src/core/: mod.rs  namespace.rs
crates/gamlastan/src/core/assertion/: attribute.rs  authn.rs  issuer.rs  subject.rs  types.rs
crates/gamlastan/src/core/protocol/: logout.rs  name_id_mapping.rs  query.rs  request.rs  status.rs
crates/gamlastan/src/crypto/: config.rs  decryptor.rs  digest.rs  encryptor.rs  error.rs  keys.rs  mod.rs  signer.rs  verifier.rs
crates/gamlastan/src/idp/: assertion_store.rs  authn_broker.rs  entity_category.rs  eptid.rs  ident.rs  mod.rs  policy.rs
crates/gamlastan/src/metadata/: deserialize.rs  mod.rs  serialize.rs  validation.rs
crates/gamlastan/src/metadata/types/: affiliation.rs  contact.rs  entity_descriptor.rs  idp.rs  key_descriptor.rs  localized.rs  md_extensions.rs  mod.rs  pdp.rs  sp.rs  spid.rs
crates/gamlastan/src/profiles/: artifact_resolution.rs  assertion_query.rs  confirmation.rs  error.rs  idp_discovery.rs  logout.rs  mod.rs  name_id_mapping.rs  name_id_mgmt.rs  pefim.rs
crates/gamlastan/src/profiles/attribute/: basic.rs  dce_pac.rs  uuid.rs  x500.rs
crates/gamlastan/src/profiles/sso/: ecp.rs  idp.rs  sp.rs  web_browser.rs
crates/gamlastan/src/profiles/swedenconnect/: authn_context.rs  config.rs  constants.rs  error.rs  idp.rs  metadata.rs  mod.rs  principal_selection.rs  request.rs  response.rs  sign_message.rs  xmlutil.rs
crates/gamlastan/src/security/: conditions.rs  error.rs  relay_state.rs  signature.rs  validation.rs
crates/gamlastan/src/xml/: deserialize.rs  error.rs  helpers.rs  mod.rs  serialize.rs
crates/gamlastan/src/xml/assertion/: deserialize.rs  serialize.rs
crates/gamlastan/src/xml/protocol/: deserialize.rs  serialize.rs
crates/gamlastan/tests/: cert_encryption.rs  hsm_signing.rs  response_signing.rs
crates/gamlastan/tests/fixtures/: enc-key.pem
crates/swsaml/: Cargo.toml
crates/swsaml-actix/: Cargo.toml
crates/swsaml-actix/src/: config.rs  error.rs  extractors.rs  idp.rs  lib.rs  middleware.rs  request_adapter.rs  responders.rs  response_adapter.rs  sp.rs
crates/swsaml-bindings/: Cargo.toml
crates/swsaml-bindings/src/: artifact.rs  caching.rs  deflate.rs  encoding.rs  error.rs  paos.rs  post.rs  redirect.rs  relay_state.rs  soap.rs  traits.rs  uri.rs
crates/swsaml-core/: Cargo.toml
crates/swsaml-core/src/: constants.rs  error.rs  identifiers.rs  lib.rs  time.rs
crates/swsaml-core/src/assertion/: attribute.rs  authn.rs  authz.rs  conditions.rs  issuer.rs  name_id.rs  subject.rs  types.rs
crates/swsaml-core/src/protocol/: artifact.rs  logout.rs  name_id_mapping.rs  name_id_mgmt.rs  query.rs  request.rs  response.rs  status.rs
crates/swsaml-crypto/: Cargo.toml
crates/swsaml-crypto/src/: decryptor.rs  digest.rs  encryptor.rs  keys.rs  lib.rs  signer.rs  verifier.rs
crates/swsaml-metadata/: Cargo.toml
crates/swsaml-metadata/src/: cache.rs  deserialize.rs  error.rs  lib.rs  serialize.rs  signing.rs  validation.rs
crates/swsaml-metadata/src/types/: attr_authority.rs  authn_authority.rs  extensions.rs  idp.rs  sp.rs  spid.rs
crates/swsaml-metadata/tests/: metadata_roundtrip.rs
crates/swsaml-profiles/: Cargo.toml
crates/swsaml-profiles/src/: artifact_resolution.rs  assertion_query.rs  confirmation.rs  error.rs  idp_discovery.rs  lib.rs  logout.rs  name_id_mapping.rs  name_id_mgmt.rs
crates/swsaml-profiles/src/attribute/: basic.rs  dce_pac.rs  mod.rs  uuid.rs  x500.rs
crates/swsaml-profiles/src/sso/: ecp.rs  idp.rs  sp.rs  web_browser.rs
crates/swsaml-security/: Cargo.toml
crates/swsaml-security/src/: audience.rs  clock.rs  conditions.rs  config.rs  destination.rs  error.rs  relay_state.rs  replay.rs  validation.rs
crates/swsaml-xml/: Cargo.toml
crates/swsaml-xml/src/: deserialize.rs  error.rs  helpers.rs  lib.rs  serialize.rs
crates/swsaml-xml/src/assertion/: deserialize.rs  mod.rs  serialize.rs
crates/swsaml-xml/src/protocol/: deserialize.rs  mod.rs  serialize.rs
crates/swsaml-xml/tests/: assertion_roundtrip.rs  protocol_roundtrip.rs
crates/swsaml/src/: lib.rs
crates/swsaml/src/bindings/: artifact.rs  deflate.rs  encoding.rs  error.rs  mod.rs  post.rs  redirect.rs  traits.rs
crates/swsaml/src/core/: identifiers.rs  time.rs
crates/swsaml/src/core/assertion/: attribute.rs  mod.rs  name_id.rs
crates/swsaml/src/core/protocol/: artifact.rs  (+3 more)
crates/swsaml/src/crypto/: config.rs  decryptor.rs  digest.rs  encryptor.rs  error.rs  keys.rs  signer.rs  verifier.rs
crates/swsaml/src/metadata/: cache.rs  error.rs  signing.rs  validation.rs
crates/swsaml/src/profiles/: assertion_query.rs  error.rs  idp_discovery.rs  logout.rs  name_id_mapping.rs  session.rs
crates/swsaml/src/security/: audience.rs  mod.rs  name_id.rs  recipient.rs  validation.rs
crates/swsaml/src/xml/: deserialize.rs  error.rs  helpers.rs  serialize.rs
example-idp/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  init-sp.sh
example-idp/src/: main.rs
spid-sp-test/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
spid-sp-test/docker/: entrypoint.sh
spid-sp-test/src/: main.rs
(+55 files in other folders)
