[workspace]
members = [
    "crates/gamlastan",
    "crates/gamlastan-actix",
    "crates/gamlastan-mdq",
    "spid-sp-test",
    "example-idp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kushaldas/gamlastan"
readme = "README.md"
license = "BSD-2-Clause"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
gamlastan = { version = "0.1.0", path = "crates/gamlastan" }
gamlastan-actix = { version = "0.1.0", path = "crates/gamlastan-actix" }
gamlastan-mdq = { version = "0.1.0", path = "crates/gamlastan-mdq" }

# XML parsing
uppsala = "0.4.0"

# XML security
bergshamra = "0.5.1"
bergshamra-core = "0.5.1"
bergshamra-dsig = "0.5.1"
bergshamra-enc = "0.5.1"
bergshamra-c14n = "0.5.1"
bergshamra-crypto = "0.5.1"
bergshamra-keys = "0.5.1"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Byte buffers
bytes = "1"

# Error handling
thiserror = "2"

# Encoding
base64 = "0.22"
flate2 = "1"

# Serialization
serde = { version = "1", features = ["derive"] }

# Web framework
actix-web = { version = "4", features = ["rustls-0_23"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2"

# Logging
env_logger = "0.11"
log = "0.4"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Tokio
tokio = { version = "1", features = ["full"] }
