[package]
name = "gamlastan"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SAML 2.0 library - types, XML, crypto, metadata, bindings, security, profiles"
readme = "README.md"
repository = "https://github.com/kushaldas/gamlastan"
homepage = "https://github.com/kushaldas/gamlastan"
keywords = ["saml", "saml2", "sso", "identity", "xml-security"]
categories = ["authentication", "web-programming"]

[dependencies]
# XML parsing
uppsala = { workspace = true }

# XML security
bergshamra = { workspace = true }
bergshamra-core = { workspace = true }
bergshamra-dsig = { workspace = true }
bergshamra-enc = { workspace = true }
bergshamra-c14n = { workspace = true }
bergshamra-crypto = { workspace = true }
bergshamra-keys = { workspace = true }

# HSM / PKCS#11 signing backend. gamlastan uses the shared `Signer` trait and
# related algorithm types directly and re-exports the crate for consumers.
# The current bergshamra/kryptering stack already resolves PKCS#11 support in
# normal builds, so this line does not create a separate opt-in feature gate.
kryptering = { workspace = true }

# Date/time
chrono = { workspace = true }

# Byte buffers
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Encoding
base64 = { workspace = true }
flate2 = { workspace = true }

# RNG (pinned to 0.8 as in gamlastan core)
rand = "0.8"
regex = "1.12.4"

