[package]
name = "swsaml-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SAML 2.0 protocol bindings - HTTP Redirect, POST, Artifact, SOAP, PAOS, URI"

[dependencies]
swsaml-core = { workspace = true }
swsaml-xml = { workspace = true }
swsaml-crypto = { workspace = true }
uppsala = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
thiserror = { workspace = true }
