[package]
name = "swsaml-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SAML 2.0 metadata types, caching, validation, and endpoint resolution"

[dependencies]
swsaml-core = { workspace = true }
swsaml-xml = { workspace = true }
swsaml-crypto = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uppsala = { workspace = true }

[dev-dependencies]
