[package]
name = "swsaml-profiles"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SAML 2.0 profiles - Web Browser SSO, Single Logout, ECP, Artifact Resolution, Attribute Profiles"

[dependencies]
swsaml-core = { workspace = true }
swsaml-xml = { workspace = true }
swsaml-crypto = { workspace = true }
swsaml-metadata = { workspace = true }
swsaml-bindings = { workspace = true }
swsaml-security = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
