[package]
name = "swsaml-xml"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "XML layer for SAML 2.0 - uppsala integration, deserialization, serialization"

[dependencies]
swsaml-core = { workspace = true }
uppsala = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
